--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@iconify/json": "^2.2.194",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.0",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
+		"carbon-components-svelte": "^0.85.0",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
@@ -27,10 +29,12 @@
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
+		"unplugin-icons": "^0.18.5",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
+		"iconify-icon": "^2.0.0",
 		"mysql2": "^3.9.2"
 	}
 }
